--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
       <a class="btn btn-primary btn-lg mt-4" href="/notes" role="button">Get Started</a>
     </div>
   </div>
+  <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
   <script src="/assets/js/index.js"></script>
 </body>
 
